########################################################################
# Tests CMakeLists.txt
#
#
########################################################################

########################################################################
# Include directories so cmake knows where .h files live
########################################################################
include_directories (${PROJECT_SOURCE_DIR}/src)

########################################################################
# Example Sources
########################################################################
list(APPEND test_srcs
    test_frame_detector.cpp
)

########################################################################
# Create executables
########################################################################
add_executable(test_fun_ofdm ${test_srcs})

########################################################################
# Link executables to fun_ofdm library
########################################################################
target_link_libraries(test_fun_ofdm fun_ofdm gtest gtest_main)

